Media controls max width is the width of the viewport.

When a media element can't be shown in the viewport and horizontal
scrolling is blocked, the controls should take this into considerations
and don't get partially hidden.

BUG=637939
R=eae@chromium.org

Review-Url: https://codereview.chromium.org/2470503003
Cr-Commit-Position: refs/heads/master@{#429288}

Former-commit-id: 3347bb8ad251e778ed35c433c0246e0659f2402d